test/force-app/main/default/objects/O_and_M_Assumps__c/O_and_M_Assumps__c.object-meta.xml
<CustomObject>
    <description>O&amp;M costs related to an assumption set</description>
    <label>O&amp;M Assumps</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>O&amp;M Assumps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>