test/force-app/main/default/objects/O_and_M_Assumps__c/fields/Assumption_Set__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Set__c</fullName>
    <label>Assumption Set</label>
    <referenceTo>Assumption_Set__c</referenceTo>
    <relationshipLabel>O&amp;M Assumps</relationshipLabel>
    <relationshipName>O_M_Assumps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>