test/force-app/main/default/objects/O_and_M_Assumps__c/fields/Unplanned_Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Maintenance_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Unplanned Maintenance Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>